test/tests/compiler/11_long_integers/valid/extra_credit/plx1_cast_decr_prefix_lval.plx
pub fn main(none) i32 {
    x: i32 = 1
    return --cast<i32>(x)
}
