test/tests/compiler/11_long_integers/invalid_types/extra_credit/plx1_cast_decr_prefix_rval.plx
pub fn main(none) i32 {
    return --cast<i32>(1)
}
